[gd_scene load_steps=25 format=2]

[ext_resource path="res://engine/scenes/ui/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://engine/fonts/SerpentineDBol.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://engine/sprites/ui/main_menu/logo_orange.png" type="Texture" id=3]
[ext_resource path="res://engine/fonts/Pixel-Life.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://engine/sprites/ui/main_menu/bg_planet.png" type="Texture" id=5]
[ext_resource path="res://engine/scenes/ui/button_prompt/ButtonPrompt.tscn" type="PackedScene" id=6]
[ext_resource path="res://engine/sprites/ui/main_menu/background.png" type="Texture" id=7]
[ext_resource path="res://engine/scenes/ui/main_menu/SaveGameInfoDisplay.tscn" type="PackedScene" id=8]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/2.png" type="Texture" id=9]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/3.png" type="Texture" id=10]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/0.png" type="Texture" id=11]
[ext_resource path="res://engine/scenes/ui/settings_menu/SettingsMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://engine/fonts/Pixeled.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://engine/scenes/ui/button_icon/ButtonIcon.tscn" type="PackedScene" id=14]
[ext_resource path="res://engine/sprites/ui/button_prompt/keyboard/keys/BACKSPACE.png" type="Texture" id=15]
[ext_resource path="res://engine/scenes/ui/multiple_choice_prompt/MultipleChoicePrompt.tscn" type="PackedScene" id=16]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float size_x = 32.0; // blocks by x direction
uniform float size_y = 32.0; // blocks by y direction

void fragment() {
    COLOR = texture(TEXTURE, vec2(floor(UV.x * size_x) / (size_x - 1.0), floor(UV.y * size_y) / (size_y - 1.0)));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/size_x = 640.0
shader_param/size_y = 640.0

[sub_resource type="DynamicFont" id=3]
size = 122
use_filter = true
extra_spacing_char = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 51
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 64
extra_spacing_bottom = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -15
extra_spacing_bottom = -9
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=7]
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -15
extra_spacing_bottom = -7
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title/Options:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 645.003, 256 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title/Options:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title/Options:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Title/TitleLogo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Title/TitleLogo:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Title/TitleLogo:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 734.88, 116.143 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Title:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Overlay/ColorRect:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SaveSelection:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.001 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Settings:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="MainMenu" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.792157, 0.792157, 0.792157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1136.42
margin_right = -1136.42
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_planet" type="Sprite" parent="Background/Control"]
material = SubResource( 2 )
rotation = -1.79595
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLogo" type="TextureRect" parent="Title"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1240.15
margin_top = -407.583
margin_right = -83.1548
margin_bottom = -121.583
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title/TitleLogo"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.25598
margin_top = -4.87756
margin_right = -2.25598
margin_bottom = 299.122
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.972549, 0.313726, 0.0313726, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.0941176, 0.376471, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "ENGINE"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Title"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1101.09
margin_top = 55.9485
margin_right = -456.092
margin_bottom = 311.948
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSave" type="Label" parent="Title/Options"]
margin_left = 372.0
margin_right = 644.0
margin_bottom = 49.0
mouse_filter = 1
size_flags_horizontal = 8
custom_fonts/font = SubResource( 4 )
text = "Save selection"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Title/Options/SelectSave"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Settings" type="Label" parent="Title/Options"]
margin_left = 495.0
margin_top = 69.0
margin_right = 644.0
margin_bottom = 118.0
mouse_filter = 1
size_flags_horizontal = 8
custom_fonts/font = SubResource( 4 )
text = "Settings"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Title/Options/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Docs" type="Label" parent="Title/Options"]
margin_left = 442.0
margin_top = 138.0
margin_right = 644.0
margin_bottom = 187.0
mouse_filter = 1
size_flags_horizontal = 8
custom_fonts/font = SubResource( 4 )
text = "Resources"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Title/Options/Docs"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit" type="Label" parent="Title/Options"]
margin_left = 574.0
margin_top = 207.0
margin_right = 644.0
margin_bottom = 256.0
mouse_filter = 1
size_flags_horizontal = 8
custom_fonts/font = SubResource( 4 )
text = "Quit"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Title/Options/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveSelection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveContainer" type="VBoxContainer" parent="SaveSelection"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1000.0
margin_top = 59.0
margin_bottom = -386.0
custom_constants/separation = 120
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SaveGameInfoDisplay" parent="SaveSelection/SaveContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 13.0
margin_right = 1000.0
margin_bottom = 136.75

[node name="SaveGameInfoDisplay2" parent="SaveSelection/SaveContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 256.0
margin_right = 1000.0
margin_bottom = 379.75

[node name="SaveGameInfoDisplay3" parent="SaveSelection/SaveContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 499.0
margin_right = 1000.0
margin_bottom = 622.75

[node name="ButtonPrompts" type="HBoxContainer" parent="SaveSelection"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1115.0
margin_top = -60.0
margin_right = -566.0
margin_bottom = -44.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 14
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyButtonPrompt" parent="SaveSelection/ButtonPrompts" instance=ExtResource( 6 )]
margin_left = 387.0
margin_right = 458.0
preview_text = "Copy file"
preview_texture = ExtResource( 9 )
default_text = "titlescreen_button_copy_file"
default_action_key = "ui_special_1"

[node name="DeleteButtonPrompt" parent="SaveSelection/ButtonPrompts" instance=ExtResource( 6 )]
margin_left = 472.0
margin_right = 549.0
preview_text = "Erase file"
preview_texture = ExtResource( 10 )
default_text = "titlescreen_button_delete_file"
default_action_key = "ui_special_2"
hold_time = 3

[node name="MultipleChoicePrompt" parent="SaveSelection" instance=ExtResource( 16 )]
visible = false
margin_right = -960.0
margin_bottom = -540.0
rect_scale = Vector2( 2, 2 )
color = Color( 0, 0, 0, 1 )

[node name="Description" type="VBoxContainer" parent="SaveSelection"]
margin_left = 824.0
margin_top = 780.0
margin_right = 1888.0
margin_bottom = 964.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="SaveSelection/Description"]
visible = false
margin_right = 1064.0
margin_bottom = 90.0
dragger_visibility = 1

[node name="Completion" type="Label" parent="SaveSelection/Description/HSplitContainer"]
margin_right = 448.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 5 )
text = "Completion: 13.2 %"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="SaveSelection/Description/HSplitContainer"]
margin_left = 460.0
margin_right = 1064.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 5 )
text = "Difficulty: One-hit KO"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer2" type="HSplitContainer" parent="SaveSelection/Description"]
visible = false
margin_top = 94.0
margin_right = 1064.0
margin_bottom = 184.0

[node name="Created" type="Label" parent="SaveSelection/Description/HSplitContainer2"]
margin_right = 1064.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 5 )
text = "Created: 10/8/2021"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="SaveSelection/Description/HSplitContainer2"]
visible = false
margin_left = 488.0
margin_right = 1140.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 5 )
text = "Difficulty: One-hit KO"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsDescription" type="ColorRect" parent="Settings"]
margin_left = 56.0
margin_top = 61.0
margin_right = 378.0
margin_bottom = 333.0
rect_scale = Vector2( 2, 2 )
color = Color( 1, 1, 1, 0.101961 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Settings/SettingsDescription"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -130.5
margin_right = 154.0
margin_bottom = 130.5
custom_fonts/font = SubResource( 6 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsValue" type="ColorRect" parent="Settings"]
margin_left = 56.0
margin_top = 674.0
margin_right = 378.0
margin_bottom = 745.0
rect_scale = Vector2( 2, 2 )
color = Color( 1, 1, 1, 0.101961 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Settings/SettingsValue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -27.5
margin_right = 154.0
margin_bottom = 27.5
custom_fonts/font = SubResource( 7 )
text = "Joypad:
Keyboard:"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopButtonIcon" parent="Settings/SettingsValue" instance=ExtResource( 14 )]
margin_left = 282.315
margin_top = 10.9293
margin_right = 298.315
margin_bottom = 26.9293
rect_scale = Vector2( 1.5, 1.5 )
action_key = "ui_accept"

[node name="BottomButtonIcon" parent="Settings/SettingsValue" instance=ExtResource( 14 )]
margin_left = 282.315
margin_top = 37.9057
margin_right = 298.315
margin_bottom = 53.9057
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 15 )
action_key = "ui_accept"

[node name="SettingsMenu" parent="Settings" instance=ExtResource( 12 )]
description_label_path = NodePath("../SettingsDescription/Label")
value_label_path = NodePath("../SettingsValue/Label")
top_buttonicon_path = NodePath("../SettingsValue/TopButtonIcon")
bottom_buttonicon_path = NodePath("../SettingsValue/BottomButtonIcon")
confirm_button_path = NodePath("../../MainButtonPrompts/AcceptButtonPrompt")
cancel_button_path = NodePath("../../MainButtonPrompts/CancelButtonPrompt")
save_button_path = NodePath("../ButtonPrompts/SaveButtonPrompt")
reset_button_path = NodePath("../ButtonPrompts/ResetButtonPrompt")

[node name="ButtonPrompts" type="HBoxContainer" parent="Settings"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1121.11
margin_top = -60.0159
margin_right = -572.113
margin_bottom = -44.0159
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 14
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButtonPrompt" parent="Settings/ButtonPrompts" instance=ExtResource( 6 )]
margin_left = 300.0
margin_right = 405.0
preview_text = "Save changes"
preview_texture = ExtResource( 9 )
default_text = "settings_button_save"
default_action_key = "ui_special_1"
start_invisible = true

[node name="ResetButtonPrompt" parent="Settings/ButtonPrompts" instance=ExtResource( 6 )]
margin_left = 419.0
margin_right = 549.0
preview_text = "Reset all to default"
preview_texture = ExtResource( 10 )
default_text = "settings_button_reset"
default_action_key = "ui_special_2"
hold_time = 2
start_invisible = true

[node name="MainButtonPrompts" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.7876
margin_top = -60.0
margin_right = 289.787
margin_bottom = -44.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptButtonPrompt" parent="MainButtonPrompts" instance=ExtResource( 6 )]
margin_right = 56.0
preview_text = "Select"
default_text = "titlescreen_button_accept_option"
default_action_key = "ui_accept"

[node name="CancelButtonPrompt" parent="MainButtonPrompts" instance=ExtResource( 6 )]
margin_left = 70.0
margin_right = 119.0
preview_text = "Back"
preview_texture = ExtResource( 11 )
default_text = "titlescreen_button_back_option"
default_action_key = "ui_cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reset = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="Overlay" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="Overlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="category_mode_changed" from="Settings/SettingsMenu" to="." method="_on_SettingsMenu_category_mode_changed"]
